<?xml version="1.0" encoding="utf-8"?>
<resources>

	<!-- 
	
		TITLE: General purpose Strings
		
		DESCRIPTION: Strings that are used throughout the application
					 are stored here.

	-->
	<string name="overview">Overview</string>
	<string name="tabs_1_tab_1">Overview</string>
	<string name="tabs_1_tab_2">Today</string>
	<string name="tabs_1_tab_3">Statistics</string>
	<string name="tabs_1_tab_4">Charts</string>
    <string name="hello">Hello World, financoid!</string>
    <string name="app_name">Financoid</string>
    <string name="feedbacktitle">Help us make financoid better</string>
    <string name="feedbackname">Name</string>
    <string name="feedbackemail">E-mail</string>
    <string name="feedbackbody">Text</string>
    <string name="feedbackresponse">Enter type of feedback</string>
    <string name="feedbackresponsecheck">Would you like a response?</string>
    <string name="feedbackbutton">Send Feedback</string>
    <string name="feedbacktype">Type of feedback</string>
    <string name="feedbacktype1">Praise</string>  
    <string name="feedbacktype2">Gripe</string>  
    <string name="feedbacktype3">Suggestion</string>  
    <string name="feedbacktype4">Bug</string>
    <string name="buttontext_simpleemail">Send plain text</string>
    <string name="chooser">Send message using:</string>
    <string name="chooser_pic">Send picture using:</string>
    <string name="buttontext_simpleemail_chooser">Send a message (Choose app to send)
	</string>
	<string name="buttontext_email">Send plaintext message (with supplied content)
	</string>
	<string name="buttontext_msg_pic">Send picture msg (with supplied content)
	</string>
	<string name="email_message">This is my message body.\n\nCheers,\nMe
	</string>
	<string name="email_subject">This is my subject</string>
	<string name="email_address">livathinos.spyros@gmail.com</string>
	<string name="email_address_cc">test_cc@fakehost.com</string>
	<string name="email_address_bcc">test_bcc@fakehost.com</string>
	<string name="invite_message_preview_title">Message to send:</string>
	<string name="invite_email_label">Enter email:</string>
	<string name="pick_email_label">Browse...</string>
	<string name="invite_activity_title">Invite Someone to Something</string>
	<string name="message_preview">Message will go here...</string>
	        <string name="invitetypeprompt">Pick type of invite...</string>
        <string name="invite_email_hint">Enter email...</string>
    <string
        name="invitetype1">Coffee</string>
    <string
        name="invitetype2">Lunch</string>
    <string
        name="invitetype3">Walk Around the Block</string>
    <string name="feedbackmessagebody_format">To: The %1$s Department\n\n %2$s\n\n %3$s (%4$s) - %5$s</string>
    <string
        name="feedbackmessagebody_responseyes">Requires a response</string>
    <string
        name="feedbackmessagebody_responseno">Does not require a response</string>
    <string
        name="feedbackmessagesubject_format">Application Feedback (%1$s)</string>   
     
     
     <!-- 
     	
     	  TITLE: "New Transaction" Strings
     	  
     	  DESCRIPTION: Strings that are used in the New Transaction Activity
     
     -->
     
     <string name="transactionCategoryLabel">Category</string>
     <string name="transactionNameLabel">Transaction title</string>
     <string name="transactionAmountLabel">Amount</string>
     <string name="transactionSave">Save Transaction</string>
     <string name="transactionDelete">Delete Transaction</string>
     
     <string name="export_header">Export data</string>
     <string name="exporting_title">Export database</string>
     <string name="exporting">Exporting...</string>
     <string name="save_as">Save as</string>
     <string name="filename">Filename</string>
     <string name="csv_file">CSV File</string>
     <string name="restore_database">Restore Database</string>
     <string name="sql_file">SQL File</string>
     <string name="sqlite">SQL Lite</string>
     <string name="import_header">Import</string>
     <string name="confirm_erase">Are you sure you want to erase this transaction?</string>
     <string name="erase">Erase</string>
     <string name="backup_restored">Backup restored</string>
     <string name="backup_restored_msg">Backup restored</string>
     <string name="export_finished_msg">Export finished</string>
     <string name="success">Exporting your data was successful</string>
     <string name="error">An error has occured</string>
     
     <string name="accountHeaderLabel">Account management</string>
     <string name="accountNameLabel">Account name</string>
     <string name="accountBalanceLabel">Total account balance</string>
     <string name="accountMonthlyBudgetLabel">Monthly budget</string>
     
</resources>
